--- a/style.css
+++ b/style.css
@@ -1,25 +1,161 @@
+:root {
+    --main-color: #000000;
+    --secondary-color: #000000;
+    --accent-color: hsl(168, 79%, 34%);
+}
+
+::selection {
+    color: white;
+    background-color: var(--accent-color);
+}
+
 body {
     margin: 0px;
     padding: 0px;
+    color: white;
+    background-image:
+        linear-gradient(
+            -45deg,
+            rgb(24, 21, 39),
+            rgb(22, 29, 58)
+        );
+    background-attachment: fixed;
+    font-family: sans-serif;
 }
 
-header {
+/* HEADER START */
+
+#header {
     display: flex;
     justify-content: space-between;
-    background-color: brown;
+    background-color: hsl(220, 66%, 13%);
 }
 
 #header-img {
-    display: inline-block;
+    object-fit: contain;
+    width: 48px;
+    margin-left: 32px;
 }
 
 #nav-bar ul {
-    display: flex;
-    justify-content: flex-end;
-
+    margin: 0px;
+    padding: 0px;
     list-style-type: none;
 }
 
 .nav-link {
-    padding: 10px 20px;
+    text-decoration: none;
+    color: white;
+}
+
+.nav-link li {
+    box-sizing: content-box;
+    display: inline-block;
+    padding: 16px 24px;
+    padding-bottom: 14px;
+    border-bottom: solid transparent;
+}
+
+.nav-link li:hover {
+    background-color: hsla(168, 88%, 35%, 0.13);
+    border-bottom: solid var(--accent-color);
+}
+
+/* HEADER END */
+
+/* BANNER START */
+
+#intro {
+    background:
+        linear-gradient(rgba(6, 6, 20, 0.774), rgba(14, 8, 19, 0.719)),
+        url("./assets/intro-bg.jpg");
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 180px 60px;
+}
+
+#intro-content {
+    text-align: center;
+}
+
+#intro-title {
+    margin: 0px;
+    font-size: 64px;
+    margin-bottom: 0.25em;
+}
+
+#intro-description {
+    margin: 0px;
+    font-size: 28px;
+    color: lightgray;
+}
+
+.section-header {
+    text-align: center;
+    font-size: 32px;
+}
+
+.feature-card {
+    display: flex;
+    justify-content: space-around;
+    padding: 32px;
+    border-radius: 16px;
+    background-color:hsl(225, 28%, 14%);
+    /* background-color:rgb(11, 12, 17); */
+}
+
+.feature-card img {
+    width: 20%;
+    width: 100px;
+    height: 100px;
+    opacity: 70%;
+}
+
+.feature-content {
+    width: 60%;
+}
+
+.feature-content header {
+    margin-bottom: 0.25em;
+    font-size: 24px;
+    font-weight: bold;
+    color: var(--accent-color);
+}
+
+.feature-content p {
+    margin: 0px;
+    color: lightgray;
+}
+
+
+#video {
+    display: block;
+    margin: auto;
+}
+
+
+#download-btn {
+    display: block;
+    padding: 16px;
+    margin: 32px auto;
+    width: 100px;
+    border-radius: 4px;
+    text-align: center;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: white;
+    background-color: var(--accent-color);
+}
+
+#prelude-bg-img {
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    background-image: url("./assets/background.jpg");
+    z-index: -1;
+    filter: 
+        brightness(30%)
+        hue-rotate(60deg);
 }
