--- a/style.css
+++ b/style.css
@@ -27,8 +27,11 @@ body {
 
 #header {
     display: flex;
+    position: fixed;
+    width: 100vw;
     justify-content: space-between;
     background-color: hsl(220, 66%, 13%);
+    z-index: 1;
 }
 
 #header-img {
