--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ body {
     background-image:
         linear-gradient(
             -45deg,
-            rgb(24, 21, 39),
-            rgb(22, 29, 58)
+            rgb(10, 54, 48) 5%,
+            rgb(22, 29, 58) 40%
         );
     background-attachment: fixed;
     font-family: sans-serif;
