Set video to be mobile responsive

--- a/style.css
+++ b/style.css
@@ -160,6 +160,9 @@ body {
 #video {
     display: block;
     margin: auto;
+    max-width: 100%;
+    height: auto;
+    aspect-ratio: 16/9;
 }
 
 
