--- a/style.css
+++ b/style.css
@@ -103,6 +103,13 @@ body {
     background-color: hsla(0, 0%, 0%, 0.158);
 }
 
+.section-intro {
+    position: relative;
+    margin: 16px 0px;
+    font-size: 18px;
+    text-align: center;
+}
+
 .section-content {
     padding: 64px 0px;
 }
