--- a/style.css
+++ b/style.css
@@ -208,3 +208,73 @@ body {
 
 /* INSTALLATION SECTION END */
 
+/* SOCIALS SECTION START */
+
+#socials-group-div {
+    display: flex;
+    align-items: center;
+    margin: 32px auto;
+    width: 400px;
+}
+
+.socials-container {
+    display: inline-flex;
+    margin: auto;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background-color: hsla(0, 0%, 0%, 0.445);
+    align-items: center;
+    justify-content: center;
+}
+
+.fa {
+    font-size: 40px;
+    text-decoration: none;
+    color: white;
+}
+
+#form {
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
+}
+
+.input-group {
+    display: flex;
+    padding: 8px;
+    justify-content: center;
+}
+
+#email {
+    padding: 4px 8px;
+    margin-right: 16px;
+    border-radius: 4px;
+    width: 200px;
+}
+
+#submit {
+    padding: 12px 16px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    text-align: center;
+    text-transform: uppercase;
+    color: white;
+    background-color: var(--accent-color);
+}
+
+#submit:hover {
+    cursor: pointer;
+}
+
+#privacy-policy {
+    margin-right: 16px;
+}
+
+label[for="privacy-policy"] a {
+    color: var(--accent-color);
+}
+
+/* SOCIALS SECTION END */
